--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -19,6 +19,7 @@
          Text="+"
          FontSize="20"/>
       <RefreshView
+         IsRefreshing="{Binding IsRefreshing}"
          Command="{Binding LoadShoppingListsCommand}"
          Grid.ColumnSpan="2"
          Grid.Row="1">
